--- a/config/parameters.yml.tmpl
+++ b/config/parameters.yml.tmpl
@@ -22,3 +22,4 @@ parameters:
     jobs_work_dir: $JOBS_WORK_DIR
     jobs_drmaa_native: $JOBS_DRMAA_NATIVE
     cdd_delta_path: $CDD_DELTA_PATH
+    base_url_path: $BASE_URL_PATH
