--- a/config/parameters.yml.tmpl
+++ b/config/parameters.yml.tmpl
@@ -23,3 +23,4 @@ parameters:
     jobs_drmaa_native: $JOBS_DRMAA_NATIVE
     cdd_delta_path: $CDD_DELTA_PATH
     base_url_path: $BASE_URL_PATH
+    result_url_host: $RESULT_URL_HOST
